--- a/settings.json
+++ b/settings.json
@@ -3,13 +3,13 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Sanzy Bot Assistan", 
-"ownerNumber": "6281276698054@s.whatsapp.net",
-"NomorOwner":"6281276698054", 
-"NomorOwner2":"082183086471", 
-"NamaOwner":"SANZY YTゑ", 
-"NamaOwner2":"Dian Pratamaゑ", 
-"Dana":"081276698054", 
+"NamaBot":"Xyura", 
+"ownerNumber": "6281258758551@s.whatsapp.net",
+"NomorOwner":"6281258758551", 
+"NomorOwner2":"081258758551", 
+"NamaOwner":"Xyuraゑ", 
+"NamaOwner2":"Xyuraゑ", 
+"Dana":"081258758551", 
 "Pulsa":"081276698054", 
 "Gopay":"085761413369", 
 "kurrxdkey":"KurrXKey",
